# highway

./: .gitignore  README.md  build_poc234_kernel_hardening_workload.py  config.toml  eval_pccc_benchmark.py  pyproject.toml  run_highway_headroom_suite.py  run_llm_runtime_fake_benchmark.py  run_local_llm_quality_benchmark.py  run_long_conversation_quality_benchmark.py  run_multi_theme_long_llm_benchmark.py  run_ooc_scaleup_benchmark.py  run_poc234_kernel_hardening.py  run_quality_token_tradeoff_smoke.py  run_runtime_perf_margin_benchmark.py  run_semantic_ann_quality_benchmark.py  run_swebench_contextpack_benchmark.py  run_token_economics_smoke.py
docs/: cleanup_notes.md  roadmap_to_llm_runtime.md  validated_results.md
tests/: conftest.py  test_answer_contract.py  test_context_adapter.py  test_context_engine.py  test_llm_runtime_fake.py  test_local_llm_quality.py  test_long_conversation_quality.py  test_multi_theme_long_llm.py  test_ooc_scaleup_benchmark.py  test_out_of_core_storage.py  test_priority1_hardening.py  test_priority2_ann_ooc.py  test_priority2_no_leak_workload.py  test_priority2_runtime_margin_semantic.py  test_priority4_e2e_pipeline.py  test_priority4_stabilization.py  test_quality_token_tradeoff.py  test_ragbench_headroom_like.py  test_ragbench_ministress.py  test_real_semantic_embedder.py  test_semantic_cross_encoder_rescue.py  test_semantic_field_rescue.py  test_semantic_lexical_rescue.py  test_semantic_rerank_rescue.py  test_semantic_rescue_hybrid.py  test_swebench_contextpack.py  test_token_economics.py  test_token_economics_smoke.py
(+2088 files in other folders)
