[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "highway"
version = "0.1.0"
description = "No-leak LLM context, retrieval, and deterministic kernel research prototype."
requires-python = ">=3.10"

[project.optional-dependencies]
ann = ["faiss-cpu>=1.8"]
embeddings = ["sentence-transformers>=2.7", "torch>=2"]
rerank = ["sentence-transformers>=2.7", "torch>=2"]
benchmark = ["datasets>=2.19", "pyarrow>=15", "pandas>=2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

